# tree-sitter-embedded-template

./: .editorconfig  .gitignore  .npmignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.ejs  go.mod  go.sum  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-embedded-template.pc.in  tree-sitter-embedded_template.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_embedded_template/: __init__.py  __init__.pyi  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/: embedded-template.h
bindings/swift/TreeSitterEmbeddedTemplate/: embedded-template.h
bindings/swift/TreeSitterEmbeddedTemplateTests/: TreeSitterEmbeddedTemplateTests.swift
corpus/: main.txt
properties/: highlights-base.css  highlights-ejs.css  highlights-erb.css  injections-ejs.css  injections-erb.css
queries/: highlights.scm  injections-ejs.scm  injections-erb.scm  injections-etlua.scm
src/: binding.cc  grammar.json  highlights-base.json  highlights-ejs.json  highlights-erb.json  injections-ejs.json  injections-erb.json  node-types.json  parser.c  scanner.cc
test/corpus/: ejs.txt  erb.txt  main.txt
