[package]
name = "tree-sitter-embedded-template"
description = "Embedded template (ERB, EJS) grammar for tree-sitter"
version = "0.20.0"
authors = [
    "Max Brunsfeld <maxbrunsfeld@gmail.com>",
]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "erb", "ejs"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-embedded-template"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.5"

[build-dependencies]
cc = "1.0.96"
